--- a/index (2).html
+++ b/index (2).html
@@ -22,8 +22,7 @@
         <button class="btn-proximo" data-proximo="4">Lutar com o Basilisco </button>
            </div>
 </main>
-    
-
+  <script src="script.js"></script>
 
 </body>
 </html>
